# zap-bot

./: .env.example  .env.local.example  .gitignore  APPWRITE_FUNCTIONS.md  APPWRITE_MIGRATION_GUIDE.md  APPWRITE_SETUP.md  COMPLETE_MIGRATION_SUMMARY.md  ENV-SETUP.md  FEATURE_OVERVIEW.md  INTEGRATION-GUIDE.md  LIVEKIT_SETUP.md  README.md  UI_BACKEND_SYNC_COMPLETE.md  UPDATES.md  eslint.config.js  middleware.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tmp_refactor.js  tsconfig.json  vite.config.ts  wrangler.jsonc
.clerk/.tmp/: keyless.json
.qwen/: settings.json
__tests__/: store.test.ts
app/: globals.css  layout.tsx  loading.tsx  page.module.css  page.tsx
app/about/: page.tsx
app/agent/: page.tsx
app/blog/: page.tsx
app/dashboard/: QuickJoinPanel.tsx  (+5 more)
apps/meeting-assistant/: pyproject.toml
apps/meeting-assistant/src/: config.py  database.py  llm.py  models.py  vector_store.py  websocket_manager.py  workflow.py
apps/meeting-assistant/src/routes/: chat.py  health.py  meetings.py
components/: AppNavbar.tsx  CalendarWidget.tsx  CommandPalette.tsx  DashboardTopNav.tsx  MeetingDialog.tsx  Navbar.tsx
lib/: appwrite-compat.ts  appwrite-config.ts  appwrite.ts  aws.ts  bot-name.ts  calendar-sync.ts  email-service-free.tsx  google-calendar.ts  groq.ts  livekit-bot.ts  meeting-agent.ts  meeting-baas.ts  prisma.ts  rag.ts  settings.ts  transcript.ts  user.ts
scripts/: dashboard_refactor.js  migrate-users-attributes.mjs  setup-appwrite-schema.mjs
stores/: auth-ui-store.ts  meetingsPipelineStore.ts
types/: auth.ts
(+346 files in other folders)
